--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "artplanet",
-    "short_name": "artplanet",
+    "name": "Antitoxic",
+    "short_name": "Antitoxic",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "background_color": "#0C18FF",
+    "theme_color": "#285380",
+    "description": "A decentralized music player",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
